@@ -4,6 +4,6 @@
   
   
 <category title="Playlist3" place="1"><item><attribute id="1099686081" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686081"/><summary>Make a help function</summary><comment>With a small expl. of f.e. keybindings/search etc</comment></item><item><attribute id="1099686098" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686098"/><summary>Add more keybindings</summary><comment/></item><item><attribute id="1099687619" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099687619"/><summary>Show keybindings in context menu</summary><comment/></item><item><attribute id="1099684971" priority="1" done="1" start_date="731890" completed_date="732062" notify="0" last_edited="1114550064"/><summary>Make a list of keybindings</summary><comment>For help</comment></item><item><attribute id="1114455272" priority="1" done="1" start_date="732061" completed_date="732070" notify="0" last_edited="1115203243"/><summary>make sure total time is displayed correctly.</summary><comment/></item></category><category title="Popup" place="0"><item><attribute id="1114547890" priority="2" done="0" start_date="732062" enddate="99999999" notify="0" endtime="-60" last_edited="1114547890"/><summary>Make arrow up move focus to tree in search window.</summary><comment/></item><item><attribute id="1114608150" priority="2" done="0" start_date="732063" enddate="99999999" notify="0" endtime="-60" last_edited="1114608150"/><summary>saving playlist when allready existing.</summary><comment/></item><item><attribute id="1114601486" priority="2" done="1" start_date="732063" completed_date="732065" notify="0" last_edited="1114786756"/><summary>fix window icon markup editor</summary><comment/></item><item><attribute id="1115199324" priority="2" done="0" start_date="732070" enddate="99999999" notify="0" endtime="-60" last_edited="1115202967"/><summary>show information window in serach mode.</summary><comment>done for playlist search
-</comment></item><item><attribute id="1114601504" priority="2" done="1" start_date="732063" completed_date="732094" notify="0" last_edited="1117280660"/><summary>don't scroll title on multiline </summary><comment/></item><item><attribute id="1114526634" priority="1" done="1" start_date="732062" completed_date="732137" enddate="99999999" notify="0" endtime="-60" last_edited="1120951098"/><summary>fix cleaning of pl3_store</summary><comment></comment></item></category><category title="general" place="2"><item><attribute id="1099686513" priority="0" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686513"/><summary>Make gnome-vfs a compile time option</summary><comment/></item><item><attribute id="1099760795" priority="1" done="0" start_date="731891" enddate="99999999" notify="0" endtime="-60" last_edited="1099760795"/><summary>configure intltool check</summary><comment>configure should check for intltool, i think it allready does</comment></item><item><attribute id="1114414584" priority="1" done="1" start_date="732061" completed_date="732061" notify="0" last_edited="1114434741"/><summary>Make option  for scrolling title in player window</summary><comment>(optional?)</comment></item></category><category title="0.12 TODO" place="3"><item><attribute id="1120951169" priority="3" done="0" start_date="732137" enddate="99999999" notify="0" endtime="-60" last_edited="1120951169"/><summary>Fix right mouse click multiple items</summary><comment>add press-event and check for selection. if more then one, then stop the signal..</comment></item><item><attribute id="1120951215" priority="2" done="0" start_date="732137" enddate="99999999" notify="0" endtime="-60" last_edited="1120951215"/><summary>check if zxcvb works.</summary><comment>Is this gmpc error or install.
+</comment></item><item><attribute id="1114601504" priority="2" done="1" start_date="732063" completed_date="732094" notify="0" last_edited="1117280660"/><summary>don't scroll title on multiline </summary><comment/></item><item><attribute id="1114526634" priority="1" done="1" start_date="732062" completed_date="732137" enddate="99999999" notify="0" endtime="-60" last_edited="1120951098"/><summary>fix cleaning of pl3_store</summary><comment/></item></category><category title="general" place="2"><item><attribute id="1099686513" priority="0" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686513"/><summary>Make gnome-vfs a compile time option</summary><comment/></item><item><attribute id="1099760795" priority="1" done="0" start_date="731891" enddate="99999999" notify="0" endtime="-60" last_edited="1099760795"/><summary>configure intltool check</summary><comment>configure should check for intltool, i think it allready does</comment></item><item><attribute id="1114414584" priority="1" done="1" start_date="732061" completed_date="732061" notify="0" last_edited="1114434741"/><summary>Make option  for scrolling title in player window</summary><comment>(optional?)</comment></item></category><category title="0.12 TODO" place="3"><item><attribute id="1120951169" priority="3" done="1" start_date="732137" completed_date="732137" notify="0" last_edited="1120990882"/><summary>Fix right mouse click multiple items</summary><comment>add press-event and check for selection. if more then one, then stop the signal..</comment></item><item><attribute id="1120951215" priority="2" done="1" start_date="732137" completed_date="732137" notify="0" last_edited="1120990910"/><summary>check if zxcvb works.</summary><comment>Is this gmpc error or install.
 Check on laptop.
 </comment></item></category></gtodo>
